
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct passwd {char* pw_name; } ;
struct TYPE_3__ {char* user_name; } ;
typedef TYPE_1__ hudo_t ;


 int fprintf (int ,char*,char*) ;
 int fputs (char*,int ) ;
 struct passwd* getpwuid (int ) ;
 int getuid () ;
 int perror (char*) ;
 int stderr ;

int
user_name( hudo_t * p_hudo )
{
    struct passwd * pw;

    fputs( "[+] Looking for user_name: ", stderr );

    pw = getpwuid( getuid() );
    if ( pw == ((void*)0) ) {
        perror( "\n[-] getpwuid()" );
        return( -1 );
    }

    p_hudo->user_name = pw->pw_name;

    fprintf( stderr, "\"%s\"\n", p_hudo->user_name );
    return( 0 );
}
